OpenVDB Version History
=======================

Version 4.0.0 - In development

    Highlights:
    - Introduced some C++11 constructs.  A C++11-compatible compiler
      is now required.
    - Vector-valued grids are now much faster to construct and destroy.

      This change and other changes in this release (see "ABI changes" below)
      alter the grid ABI so that it is incompatible with earlier versions
      of the OpenVDB library, such as the ones in Houdini 15.0 and 15.5.
      Define the macro OPENVDB_3_ABI_COMPATIBLE when compiling OpenVDB
      to disable these changes and preserve ABI compatibility.

    New features:
    - Added an option to the point scattering tools to specify how far
      each point may be displaced from the center of its host voxel or tile.
    - Added a toggle to tools::clip() to invert the clipping mask.
    - Custom leaf node implementations may now optimize their file layout
      by inheriting from io::MultiPass.  Voxel data for grids with such
      leaf nodes will be written and read in multiple passes, allowing
      blocks of related data to be stored contiguously.
      [Contributed by Double Negative]

    Improvements:
    - Vector-valued grids are now much faster to construct and destroy.
    - Changed math::Coord's data representation to facilitate C++11
      uniform initialization.
    - Delayed loading from io::Files is now faster due to the use of seeks
      instead of reads.
      [Contributed by Double Negative]
    - Made many small changes to address type conversion and other warnings
      reported by newer compilers, including Clang 3.8.

    Bug fixes:
    - Fixed a bug that caused topology operations (union, intersection
      and difference) on MaskGrids to sometimes produce incorrect results.
      (MaskGrids are used internally in a number of tools.)
    - Changed GridBase::copyGrid() and Grid::copy() to close
      const-correctness holes.

    ABI changes: